[package]
name = "manhattan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.4"
rand = "0.8.5"
pathfinding = "4.8.2"
pyo3 = { version = "0.20.2", features = ["auto-initialize"] }

# disable mir optimisations in debug mode (does this work?)
[build]
rustflags = ["-Z", "mir-opt-level=0"]