[package]
name = "manhattan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.5"
rand = "0.8.5"
pathfinding = "4.8.2"
pyo3 = { version = "0.21.1" }
gxhash = "3.1.1"
indexmap = "2.2.6"

[profile.release]
debug = true